[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Ship parts/cannonMobile.png" type="Texture" id=1]
[ext_resource path="res://objects/weapons/Cannon.gd" type="Script" id=2]
[ext_resource path="res://objects/resources/Hitbox.gd" type="Script" id=3]

[node name="Cannon" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ProjectileSpawnPosition" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="CooldownTimer" type="Timer" parent="."]

[node name="HitBoxArea2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBoxArea2D"]
polygon = PoolVector2Array( 13, -5, 400, -100, 400, 100, 13, 5 )

[connection signal="area_entered" from="HitBoxArea2D" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="HitBoxArea2D" to="." method="_on_Range_area_exited"]
